Fixed sidebar nag not showing

--- a/wp-content/themes/row/style.css
+++ b/wp-content/themes/row/style.css
@@ -536,10 +536,10 @@ p {
 	background: #DFDFDF;
 	visibility: hidden;
 	opacity: 0;
-	-webkit-transition: all 0s ease-in-out;
-	-moz-transition: all 0s ease-in-out;
-	-o-transition: all 0s ease-in-out;
-	transition: all 0s ease-in-out;
+	/*-webkit-transition: all .5s ease-in;
+	-moz-transition: all .5s ease-in;
+	-o-transition: all .5s ease-in;
+	transition: all .5s ease-in;*/
 	overflow: scroll;
 	-webkit-transition-delay: .0s;
 	-moz-transition-delay: .0s;
@@ -552,17 +552,17 @@ p {
 }
 
 
-.navigate .supernav li.subinside:hover ul.dropbox {
+.navigate.slipnot .supernav li.subinside:hover ul.dropbox {
 	visibility: visible;
 	opacity: 1;
-	-webkit-transition: all 0.0s ease-out;
-	-moz-transition: all 0.0s ease-out;
-	-o-transition: all 0.0s ease-out;
-	transition: all 0.0s ease-out;
-	-webkit-transition-delay: .5s;
+	/*-webkit-transition: all 0.5s linear;
+	-moz-transition: all 0.5s linear;
+	-o-transition: all 0.5s linear;
+	transition: all 0.5s linear;*/
+	/*-webkit-transition-delay: .5s;
 	-moz-transition-delay: .5s;
 	-o-transition-delay: .5s;
-	transition-delay: .5s;
+	transition-delay: .5s;*/
 }	
 
 
